[package]
name = "http-shell-executor"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1"}
bytes = "1.10.1"
clap = { version = "4.5.32", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
http-body = "1.0.1"
